rename html file

--- a/signIn/sign.html
+++ b/signIn/sign.html
@@ -13,7 +13,7 @@
         <img src="lgo.png" class="logo-header">
         <ul class="menu">
             <li class="menu-item">
-                <a href="../hamburger.html" class="menu-item-links"">Homepage</a>
+                <a href="../index.html" class="menu-item-links"">Homepage</a>
             </li>
             <li class="menu-item">
                 <a href="" class="menu-item-links">Menu</a>
